data/derived/comb/progs/unify/prog5267.ml.out
Characters 92-94:
  | Sine e	    -> sin(pi * eval e)
                      ^^
Error: This expression has type float but an expression was expected of type
         int
